fixed alignment issues
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@7879 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/wdkSite.css
+++ b/View/webapp/wdk/css/wdkSite.css
@@ -643,7 +643,7 @@ td.strat_inactive {
     background: url(/assets/images/eyeGrey.png) no-repeat 8px 8px;
 }
 
-#strategy_tabs a:link, #strategy_tabs a:visited {
+#strategy_tabs a:link, #strategy_tabs a:visited, #strategy_tabs li span {
     border-color: #CCCCCC #CCCCCC #777777;
     border-style: solid;
     border-width: 1px;
